# face_age_detection

./: CMakeLists.txt  README.md  README_CN.md  package.xml
config/x3/: faceAge.hbm
include/: ai_msg_manage.h  face_age_det_node.h  face_age_det_output_parser.h  vote.hpp
launch/: age_gesture_fusion.launch.py  body_det_face_age_det.launch.py  face_age_det_node.launch.py
src/: ai_msg_manage.cpp  face_age_det_node.cpp  face_age_det_output_parser.cpp  main.cpp
